--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
         "element-ui": "^2.4.5",
         "mavon-editor": "^2.5.4",
         "vue": "^2.5.16",
+        "vue-clipboard2": "^0.2.1",
         "vue-cropperjs": "^2.2.0",
         "vue-quill-editor": "3.0.6",
         "vue-router": "^3.0.1",
