--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "axios": "^0.15.3",
         "babel-polyfill": "^6.23.0",
+        "echarts": "^4.2.0-rc.2",
         "element-ui": "^2.4.5",
         "mavon-editor": "^2.5.4",
         "vue": "^2.5.16",
@@ -52,7 +53,6 @@
         "stylus-loader": "^3.0.2",
         "uglifyjs-webpack-plugin": "^1.1.1",
         "url-loader": "^0.5.8",
-        "vue-echarts": "^3.1.3",
         "vue-loader": "^13.3.0",
         "vue-style-loader": "^3.0.1",
         "vue-template-compiler": "^2.5.2",
