--- a/admin/package.json
+++ b/admin/package.json
@@ -6,7 +6,8 @@
     "private": true,
     "scripts": {
         "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-        "build": "node build/build.js"
+        "build": "node build/build.js",
+        "test": "node build/test.js"
     },
     "dependencies": {
         "axios": "^0.15.3",
